Added more content

--- a/nerds.html
+++ b/nerds.html
@@ -28,8 +28,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/yoshi.jpeg" width="256" alt="Yoshi mit Ei"/>
                 <div class="card-body">
                     <h5 class="card-title">Yoshi mit Ei</h5>
-                    <p class="card-text">&hellip;</p>
-                </div>
+                    <p class="card-text">&hellip;</p>                </div>
             </div>
         </div>
         <div class="col mb-3">
@@ -37,8 +36,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/pilze.jpeg" width="256" alt="PowerUp und LevelUp Pilze"/>
                 <div class="card-body">
                     <h5 class="card-title">PowerUp und LevelUp Pilze</h5>
-                    <p class="card-text">&hellip;</p>
-                </div>
+                    <p class="card-text">&hellip;</p>                </div>
             </div>
         </div>
         <div class="col mb-3">
@@ -46,8 +44,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/stern.jpeg" width="256" alt="Stern"/>
                 <div class="card-body">
                     <h5 class="card-title">Stern</h5>
-                    <p class="card-text">&hellip;</p>
-                </div>
+                    <p class="card-text">&hellip;</p>                </div>
             </div>
         </div>
         <div class="col mb-3">
@@ -55,8 +52,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/tentakel.jpeg" width="256" alt="Purpur & Grün Tentakel"/>
                 <div class="card-body">
                     <h5 class="card-title">Purpur &amp; Gr&uuml;n Tentakel</h5>
-                    <p class="card-text">&hellip;</p>
-                </div>
+                    <p class="card-text">&hellip;</p>                </div>
             </div>
         </div>
     </div>
@@ -67,7 +63,7 @@
 </div>
 
     <div class="container">
-        <h2 class="mt-4 dancing-script">Kontakt</h2>
+        <h2 class="my-4 dancing-script">Kontakt</h2>
         <div>
             <div>Tina Jung</div>
             <div>+49 6306 3330915</div>
