--- a/tierchen.html
+++ b/tierchen.html
@@ -28,8 +28,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/tiger.jpeg" width="256" alt="Roary der Tiger"/>
                 <div class="card-body">
                     <h5 class="card-title">Roary der Tiger</h5>
-                    <p class="card-text">Jedes Tier im Dschungel kennt den kleinen, frechen Tiger Roary. Verschmitzt und gewitzt, wie er ist, hat er h&auml;ufig nur Dummheiten im Kopf. Aber lange kann ihm keiner b&ouml;se sein. Denn in diesem Tigerchen steckt nat&uuml;rlich auch ein bisschen Miezekatze.</p>
-                </div>
+                    <p class="card-text">Jedes Tier im Dschungel kennt den kleinen, frechen Tiger Roary. Verschmitzt und gewitzt, wie er ist, hat er h&auml;ufig nur Dummheiten im Kopf. Aber lange kann ihm keiner b&ouml;se sein. Denn in diesem Tigerchen steckt nat&uuml;rlich auch ein bisschen Miezekatze.</p>                </div>
             </div>
         </div>
         <div class="col mb-3">
@@ -37,8 +36,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/elch.jpeg" width="256" alt="Morton der Elch"/>
                 <div class="card-body">
                     <h5 class="card-title">Morton der Elch</h5>
-                    <p class="card-text">Der Elch Morton erregt mit seinem pr&auml;chtigen Geweih &uuml;berall Aufmerksamkeit. Und das genie&szlig;t er sichtlich. Morton kommt aus dem hohen Norden und ist K&auml;lte und Schnee gew&ouml;hnt. Aber ganz ehrlich &hellip; nichts geht ihm &uuml;ber ein Nickerchen vor dem offenen Kamin.</p>
-                </div>
+                    <p class="card-text">Der Elch Morton erregt mit seinem pr&auml;chtigen Geweih &uuml;berall Aufmerksamkeit. Und das genie&szlig;t er sichtlich. Morton kommt aus dem hohen Norden und ist K&auml;lte und Schnee gew&ouml;hnt. Aber ganz ehrlich &hellip; nichts geht ihm &uuml;ber ein Nickerchen vor dem offenen Kamin.</p>                </div>
             </div>
         </div>
         <div class="col mb-3">
@@ -46,8 +44,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/hase.jpeg" width="256" alt="Wasabi das Häschen"/>
                 <div class="card-body">
                     <h5 class="card-title">Wasabi das H&auml;schen</h5>
-                    <p class="card-text">Verspielt, eigensinnig und fr&ouml;hlich, so ist das H&auml;schen Wasabi. Es findet nichts lustiger, als mit seinen Freunden um die Wette zu rennen, denn im Hakenschlagen und &Uuml;ber-Hindernisse-Springens ist es unschlagbar. Und wer so schnell laufen kann, der ist auch gut im Streiche spielen&hellip;</p>
-                </div>
+                    <p class="card-text">Verspielt, eigensinnig und fr&ouml;hlich, so ist das H&auml;schen Wasabi. Es findet nichts lustiger, als mit seinen Freunden um die Wette zu rennen, denn im Hakenschlagen und &Uuml;ber-Hindernisse-Springens ist es unschlagbar. Und wer so schnell laufen kann, der ist auch gut im Streiche spielen&hellip;</p>                </div>
             </div>
         </div>
         <div class="col mb-3">
@@ -55,8 +52,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/tukan.jpeg" width="256" alt="Zico der Tukan"/>
                 <div class="card-body">
                     <h5 class="card-title">Zico der Tukan</h5>
-                    <p class="card-text">Sieht der Tukan Zico mit seinem gl&auml;nzend schwarzen Federkleid und dem leuchtend gelben Schnabel nicht richtig majest&auml;tisch aus? Als K&ouml;nig der Paradiesv&ouml;gel spreizt er jeden Tag seine Fl&uuml;gel und macht einen ausgedehnten Spazierflug durch den Regenwald.</p>
-                </div>
+                    <p class="card-text">Sieht der Tukan Zico mit seinem gl&auml;nzend schwarzen Federkleid und dem leuchtend gelben Schnabel nicht richtig majest&auml;tisch aus? Als K&ouml;nig der Paradiesv&ouml;gel spreizt er jeden Tag seine Fl&uuml;gel und macht einen ausgedehnten Spazierflug durch den Regenwald.</p>                </div>
             </div>
         </div>
     </div><div class="row mt-4">        <div class="col mb-3">
@@ -64,8 +60,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/welpe6.jpeg" width="256" alt="Dakota der Welpe"/>
                 <div class="card-body">
                     <h5 class="card-title">Dakota der Welpe</h5>
-                    <p class="card-text">Dakota ist lieb, knuffig und passt genau auf die Handfl&auml;che, so dass er dich &uuml;berall hin begleiten kann. Dakota ist ein verspielter Welpe, neugierig und voller Energie. Seine langen Ohren flattern im Wind, wenn er auf seinen winzigen Pf&ouml;tchen angelaufen kommt.</p>
-                </div>
+                    <p class="card-text">Dakota ist lieb, knuffig und passt genau auf die Handfl&auml;che, so dass er dich &uuml;berall hin begleiten kann. Dakota ist ein verspielter Welpe, neugierig und voller Energie. Seine langen Ohren flattern im Wind, wenn er auf seinen winzigen Pf&ouml;tchen angelaufen kommt.</p>                </div>
             </div>
         </div>
         <div class="col mb-3">
@@ -73,26 +68,23 @@
                 <img class="d-block mx-auto mb-4" src="img_256/maus.jpg" width="256" alt="Manfred die Maus"/>
                 <div class="card-body">
                     <h5 class="card-title">Manfred die Maus</h5>
-                    <p class="card-text">Manfred ist vielleicht klein, hat aber immer Lust auf gro&szlig;e Abenteuer. Er hat eine bl&uuml;hende Fantasie, doch solange er nicht nachdenkt, bevor er loslegt, bringt er sich immer wieder in unm&ouml;gliche Situationen.</p>
-                </div>
+                    <p class="card-text">Manfred ist vielleicht klein, hat aber immer Lust auf gro&szlig;e Abenteuer. Er hat eine bl&uuml;hende Fantasie, doch solange er nicht nachdenkt, bevor er loslegt, bringt er sich immer wieder in unm&ouml;gliche Situationen.</p>                </div>
             </div>
         </div>
         <div class="col mb-3">
             <div class="card" style="width: 18rem;">
-                <img class="d-block mx-auto mb-4" src="img_256/papagei7.jpeg" width="256" alt="Papagei"/>
+                <img class="d-block mx-auto mb-4" src="img_256/papagei7.jpeg" width="256" alt="Pepe der Papagei"/>
                 <div class="card-body">
-                    <h5 class="card-title">Papagei</h5>
-                    <p class="card-text">&hellip;</p>
-                </div>
+                    <h5 class="card-title">Pepe der Papagei</h5>
+                    <p class="card-text">&hellip;</p>                </div>
             </div>
         </div>
         <div class="col mb-3">
             <div class="card" style="width: 18rem;">
-                <img class="d-block mx-auto mb-4" src="img_256/lemur.jpeg" width="256" alt="Lemur"/>
+                <img class="d-block mx-auto mb-4" src="img_256/lemur.jpeg" width="256" alt="Sartu Lemur"/>
                 <div class="card-body">
-                    <h5 class="card-title">Lemur</h5>
-                    <p class="card-text">&hellip;</p>
-                </div>
+                    <h5 class="card-title">Sartu Lemur</h5>
+                    <p class="card-text">Wenn dich der kleine Sartu mit seinen gro&szlig;en Augen ansieht und l&auml;chelt, ist es um dich geschehen. Den charmanten Lemuren muss man einfach m&ouml;gen. Wegen seines pr&auml;chtigen Schwanzes beneiden ihn die anderen Tiere aber ziemlich oft.</p>                </div>
             </div>
         </div>
     </div>
@@ -103,7 +95,7 @@
 </div>
 
     <div class="container">
-        <h2 class="mt-4 dancing-script">Kontakt</h2>
+        <h2 class="my-4 dancing-script">Kontakt</h2>
         <div>
             <div>Tina Jung</div>
             <div>+49 6306 3330915</div>
