--- a/boardgame.html
+++ b/boardgame.html
@@ -28,8 +28,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/maus_und_mystik.jpeg" width="256" alt="Maus & Mystik Täschchen"/>
                 <div class="card-body">
                     <h5 class="card-title">Maus &amp; Mystik T&auml;schchen</h5>
-                    <p class="card-text">&hellip;</p>
-                </div>
+                    <p class="card-text">&hellip;</p>                </div>
             </div>
         </div>
         <div class="col mb-3">
@@ -37,8 +36,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/wuerfelbeutel.jpeg" width="256" alt="Würfeluntersetzer"/>
                 <div class="card-body">
                     <h5 class="card-title">W&uuml;rfeluntersetzer</h5>
-                    <p class="card-text">&hellip;</p>
-                </div>
+                    <p class="card-text">&hellip;</p>                </div>
             </div>
         </div>
         <div class="col mb-3">
@@ -46,8 +44,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/stoffies.jpeg" width="256" alt="Stoffies"/>
                 <div class="card-body">
                     <h5 class="card-title">Stoffies</h5>
-                    <p class="card-text">&hellip;</p>
-                </div>
+                    <p class="card-text">&hellip;</p>                </div>
             </div>
         </div>
     </div>
@@ -58,7 +55,7 @@
 </div>
 
     <div class="container">
-        <h2 class="mt-4 dancing-script">Kontakt</h2>
+        <h2 class="my-4 dancing-script">Kontakt</h2>
         <div>
             <div>Tina Jung</div>
             <div>+49 6306 3330915</div>
