--- a/klamotten.html
+++ b/klamotten.html
@@ -28,8 +28,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/haarbaender.jpeg" width="256" alt="Haarbänder"/>
                 <div class="card-body">
                     <h5 class="card-title">Haarb&auml;nder</h5>
-                    <p class="card-text">&hellip;</p>
-                </div>
+                                    </div>
             </div>
         </div>
         <div class="col mb-3">
@@ -37,8 +36,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/haarband_grau.jpeg" width="256" alt="Graues Haarband"/>
                 <div class="card-body">
                     <h5 class="card-title">Graues Haarband</h5>
-                    <p class="card-text">&hellip;</p>
-                </div>
+                                    </div>
             </div>
         </div>
         <div class="col mb-3">
@@ -46,8 +44,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/asynchron_gehaekelt.jpg" width="256" alt="Asynchron gehäkelt"/>
                 <div class="card-body">
                     <h5 class="card-title">Asynchron geh&auml;kelt</h5>
-                    <p class="card-text">&hellip;</p>
-                </div>
+                                    </div>
             </div>
         </div>
         <div class="col mb-3">
@@ -55,8 +52,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/bereit_fuer_den_herbst.jpg" width="256" alt="Bereit für den Herbst"/>
                 <div class="card-body">
                     <h5 class="card-title">Bereit f&uuml;r den Herbst</h5>
-                    <p class="card-text">&hellip;</p>
-                </div>
+                                    </div>
             </div>
         </div>
     </div><div class="row mt-4">        <div class="col mb-3">
@@ -64,8 +60,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/ein_hauch_von_masche.jpg" width="256" alt="Ein Hauch von Masche"/>
                 <div class="card-body">
                     <h5 class="card-title">Ein Hauch von Masche</h5>
-                    <p class="card-text">&hellip;</p>
-                </div>
+                                    </div>
             </div>
         </div>
         <div class="col mb-3">
@@ -73,8 +68,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/einfaches_strick_top.jpg" width="256" alt="Einfaches Strick-Top"/>
                 <div class="card-body">
                     <h5 class="card-title">Einfaches Strick-Top</h5>
-                    <p class="card-text">&hellip;</p>
-                </div>
+                                    </div>
             </div>
         </div>
         <div class="col mb-3">
@@ -82,8 +76,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/einfaches_top_mit_lochmuster.jpg" width="256" alt="Einfaches Top mit Lochmuster"/>
                 <div class="card-body">
                     <h5 class="card-title">Einfaches Top mit Lochmuster</h5>
-                    <p class="card-text">&hellip;</p>
-                </div>
+                                    </div>
             </div>
         </div>
         <div class="col mb-3">
@@ -91,8 +84,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/ganz_schoen_schraeg.jpg" width="256" alt="Ganz schön Schräg"/>
                 <div class="card-body">
                     <h5 class="card-title">Ganz sch&ouml;n Schr&auml;g</h5>
-                    <p class="card-text">&hellip;</p>
-                </div>
+                                    </div>
             </div>
         </div>
     </div><div class="row mt-4">        <div class="col mb-3">
@@ -100,8 +92,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/grauer_kurzarmpulli_mit_lochmusterleiste.jpg" width="256" alt="Grauer Kurzarmpulli mit Lochmusterleiste"/>
                 <div class="card-body">
                     <h5 class="card-title">Grauer Kurzarmpulli mit Lochmusterleiste</h5>
-                    <p class="card-text">&hellip;</p>
-                </div>
+                                    </div>
             </div>
         </div>
         <div class="col mb-3">
@@ -109,8 +100,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/mode_zum_quadrat.jpg" width="256" alt="Mode zum Quadrat"/>
                 <div class="card-body">
                     <h5 class="card-title">Mode zum Quadrat</h5>
-                    <p class="card-text">&hellip;</p>
-                </div>
+                                    </div>
             </div>
         </div>
         <div class="col mb-3">
@@ -118,8 +108,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/perfekt_fuer_kuehle_herbsttage.jpg" width="256" alt="Perfekt für kühle Herbsttage"/>
                 <div class="card-body">
                     <h5 class="card-title">Perfekt f&uuml;r k&uuml;hle Herbsttage</h5>
-                    <p class="card-text">&hellip;</p>
-                </div>
+                                    </div>
             </div>
         </div>
         <div class="col mb-3">
@@ -127,8 +116,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/pulli_mit_trompetenaermeln.jpg" width="256" alt="Pulli mit Trompetenärmeln"/>
                 <div class="card-body">
                     <h5 class="card-title">Pulli mit Trompeten&auml;rmeln</h5>
-                    <p class="card-text">&hellip;</p>
-                </div>
+                                    </div>
             </div>
         </div>
     </div><div class="row mt-4">        <div class="col mb-3">
@@ -136,8 +124,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/pullover_in_lila_toenen.jpg" width="256" alt="Pullover in lila Tönen"/>
                 <div class="card-body">
                     <h5 class="card-title">Pullover in lila T&ouml;nen</h5>
-                    <p class="card-text">&hellip;</p>
-                </div>
+                                    </div>
             </div>
         </div>
         <div class="col mb-3">
@@ -145,8 +132,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/retro_look.jpg" width="256" alt="Retro Look"/>
                 <div class="card-body">
                     <h5 class="card-title">Retro Look</h5>
-                    <p class="card-text">&hellip;</p>
-                </div>
+                                    </div>
             </div>
         </div>
         <div class="col mb-3">
@@ -154,8 +140,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/schlichte_eleganz.jpg" width="256" alt="Schlichte Eleganz"/>
                 <div class="card-body">
                     <h5 class="card-title">Schlichte Eleganz</h5>
-                    <p class="card-text">&hellip;</p>
-                </div>
+                                    </div>
             </div>
         </div>
         <div class="col mb-3">
@@ -163,8 +148,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/schwarz_ist_nie_out.jpg" width="256" alt="Schwarz ist nie out"/>
                 <div class="card-body">
                     <h5 class="card-title">Schwarz ist nie out</h5>
-                    <p class="card-text">&hellip;</p>
-                </div>
+                                    </div>
             </div>
         </div>
     </div><div class="row mt-4">        <div class="col mb-3">
@@ -172,8 +156,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/schwarz_weiss_mix.jpg" width="256" alt="Schwarz-Weiß-Mix"/>
                 <div class="card-body">
                     <h5 class="card-title">Schwarz-Wei&szlig;-Mix</h5>
-                    <p class="card-text">&hellip;</p>
-                </div>
+                                    </div>
             </div>
         </div>
         <div class="col mb-3">
@@ -181,8 +164,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/schwarzer_pulli_fuer_kalte_tage.jpg" width="256" alt="Schwarzer Pulli für kalte Tage"/>
                 <div class="card-body">
                     <h5 class="card-title">Schwarzer Pulli f&uuml;r kalte Tage</h5>
-                    <p class="card-text">&hellip;</p>
-                </div>
+                                    </div>
             </div>
         </div>
         <div class="col mb-3">
@@ -190,8 +172,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/sommerliches_oberteil.jpg" width="256" alt="Sommerliches Oberteil"/>
                 <div class="card-body">
                     <h5 class="card-title">Sommerliches Oberteil</h5>
-                    <p class="card-text">&hellip;</p>
-                </div>
+                                    </div>
             </div>
         </div>
         <div class="col mb-3">
@@ -199,8 +180,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/traum_in_tuerkis.jpg" width="256" alt="Traum in Türkis"/>
                 <div class="card-body">
                     <h5 class="card-title">Traum in T&uuml;rkis</h5>
-                    <p class="card-text">&hellip;</p>
-                </div>
+                                    </div>
             </div>
         </div>
     </div><div class="row mt-4">        <div class="col mb-3">
@@ -208,8 +188,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/upcycling.jpg" width="256" alt="Upcycling"/>
                 <div class="card-body">
                     <h5 class="card-title">Upcycling</h5>
-                    <p class="card-text">&hellip;</p>
-                </div>
+                                    </div>
             </div>
         </div>
         <div class="col mb-3">
@@ -217,8 +196,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/weisses_sommeroberteil.jpg" width="256" alt="Weißes Sommeroberteil"/>
                 <div class="card-body">
                     <h5 class="card-title">Wei&szlig;es Sommeroberteil</h5>
-                    <p class="card-text">&hellip;</p>
-                </div>
+                                    </div>
             </div>
         </div>
         <div class="col mb-3">
@@ -226,8 +204,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/zu_streifen_greifen.jpg" width="256" alt="Zu Streifen greifen"/>
                 <div class="card-body">
                     <h5 class="card-title">Zu Streifen greifen</h5>
-                    <p class="card-text">&hellip;</p>
-                </div>
+                                    </div>
             </div>
         </div>
     </div>
@@ -238,7 +215,7 @@
 </div>
 
     <div class="container">
-        <h2 class="mt-4 dancing-script">Kontakt</h2>
+        <h2 class="my-4 dancing-script">Kontakt</h2>
         <div>
             <div>Tina Jung</div>
             <div>+49 6306 3330915</div>
