--- a/pflanzen.html
+++ b/pflanzen.html
@@ -28,8 +28,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/kakteen.jpeg" width="256" alt="Kakteen"/>
                 <div class="card-body">
                     <h5 class="card-title">Kakteen</h5>
-                    <p class="card-text">&hellip;</p>
-                </div>
+                    <p class="card-text">&hellip;</p>                </div>
             </div>
         </div>
         <div class="col mb-3">
@@ -37,8 +36,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/blume.jpeg" width="256" alt="Blume"/>
                 <div class="card-body">
                     <h5 class="card-title">Blume</h5>
-                    <p class="card-text">&hellip;</p>
-                </div>
+                    <p class="card-text">&hellip;</p>                </div>
             </div>
         </div>
     </div>
@@ -49,7 +47,7 @@
 </div>
 
     <div class="container">
-        <h2 class="mt-4 dancing-script">Kontakt</h2>
+        <h2 class="my-4 dancing-script">Kontakt</h2>
         <div>
             <div>Tina Jung</div>
             <div>+49 6306 3330915</div>
