--- a/boardgame.html
+++ b/boardgame.html
@@ -24,7 +24,7 @@
 
     <div class="row">
         <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img class="d-block mx-auto mb-4" src="img_256/maus_und_mystik.jpeg" width="256" alt="Maus & Mystik Täschchen"/>
                 <div class="card-body">
                     <h5 class="card-title">Maus &amp; Mystik T&auml;schchen</h5>
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img class="d-block mx-auto mb-4" src="img_256/wuerfelbeutel.jpeg" width="256" alt="Würfeluntersetzer"/>
                 <div class="card-body">
                     <h5 class="card-title">W&uuml;rfeluntersetzer</h5>
@@ -40,7 +40,7 @@
             </div>
         </div>
         <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img class="d-block mx-auto mb-4" src="img_256/stoffies.jpeg" width="256" alt="Stoffies"/>
                 <div class="card-body">
                     <h5 class="card-title">Stoffies</h5>
