--- a/klamotten.html
+++ b/klamotten.html
@@ -24,7 +24,7 @@
 
     <div class="row">
         <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/haarbaender.jpeg" width="256" alt="Haarbänder"/>
                 <div class="card-body">
                     <h5 class="card-title">Haarb&auml;nder</h5>
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/haarband_grau.jpeg" width="256" alt="Graues Haarband"/>
                 <div class="card-body">
                     <h5 class="card-title">Graues Haarband</h5>
@@ -40,7 +40,7 @@
             </div>
         </div>
         <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/asynchron_gehaekelt.jpg" width="256" alt="Asynchron gehäkelt"/>
                 <div class="card-body">
                     <h5 class="card-title">Asynchron geh&auml;kelt</h5>
@@ -48,7 +48,7 @@
             </div>
         </div>
         <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/bereit_fuer_den_herbst.jpg" width="256" alt="Bereit für den Herbst"/>
                 <div class="card-body">
                     <h5 class="card-title">Bereit f&uuml;r den Herbst</h5>
@@ -56,7 +56,7 @@
             </div>
         </div>
     </div><div class="row mt-4">        <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/ein_hauch_von_masche.jpg" width="256" alt="Ein Hauch von Masche"/>
                 <div class="card-body">
                     <h5 class="card-title">Ein Hauch von Masche</h5>
@@ -64,7 +64,7 @@
             </div>
         </div>
         <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/einfaches_strick_top.jpg" width="256" alt="Einfaches Strick-Top"/>
                 <div class="card-body">
                     <h5 class="card-title">Einfaches Strick-Top</h5>
@@ -72,7 +72,7 @@
             </div>
         </div>
         <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/einfaches_top_mit_lochmuster.jpg" width="256" alt="Einfaches Top mit Lochmuster"/>
                 <div class="card-body">
                     <h5 class="card-title">Einfaches Top mit Lochmuster</h5>
@@ -80,7 +80,7 @@
             </div>
         </div>
         <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/ganz_schoen_schraeg.jpg" width="256" alt="Ganz schön Schräg"/>
                 <div class="card-body">
                     <h5 class="card-title">Ganz sch&ouml;n Schr&auml;g</h5>
@@ -88,7 +88,7 @@
             </div>
         </div>
     </div><div class="row mt-4">        <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/grauer_kurzarmpulli_mit_lochmusterleiste.jpg" width="256" alt="Grauer Kurzarmpulli mit Lochmusterleiste"/>
                 <div class="card-body">
                     <h5 class="card-title">Grauer Kurzarmpulli mit Lochmusterleiste</h5>
@@ -96,7 +96,7 @@
             </div>
         </div>
         <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/mode_zum_quadrat.jpg" width="256" alt="Mode zum Quadrat"/>
                 <div class="card-body">
                     <h5 class="card-title">Mode zum Quadrat</h5>
@@ -104,7 +104,7 @@
             </div>
         </div>
         <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/perfekt_fuer_kuehle_herbsttage.jpg" width="256" alt="Perfekt für kühle Herbsttage"/>
                 <div class="card-body">
                     <h5 class="card-title">Perfekt f&uuml;r k&uuml;hle Herbsttage</h5>
@@ -112,7 +112,7 @@
             </div>
         </div>
         <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/pulli_mit_trompetenaermeln.jpg" width="256" alt="Pulli mit Trompetenärmeln"/>
                 <div class="card-body">
                     <h5 class="card-title">Pulli mit Trompeten&auml;rmeln</h5>
@@ -120,7 +120,7 @@
             </div>
         </div>
     </div><div class="row mt-4">        <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/pullover_in_lila_toenen.jpg" width="256" alt="Pullover in lila Tönen"/>
                 <div class="card-body">
                     <h5 class="card-title">Pullover in lila T&ouml;nen</h5>
@@ -128,7 +128,7 @@
             </div>
         </div>
         <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/retro_look.jpg" width="256" alt="Retro Look"/>
                 <div class="card-body">
                     <h5 class="card-title">Retro Look</h5>
@@ -136,7 +136,7 @@
             </div>
         </div>
         <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/schlichte_eleganz.jpg" width="256" alt="Schlichte Eleganz"/>
                 <div class="card-body">
                     <h5 class="card-title">Schlichte Eleganz</h5>
@@ -144,7 +144,7 @@
             </div>
         </div>
         <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/schwarz_ist_nie_out.jpg" width="256" alt="Schwarz ist nie out"/>
                 <div class="card-body">
                     <h5 class="card-title">Schwarz ist nie out</h5>
@@ -152,7 +152,7 @@
             </div>
         </div>
     </div><div class="row mt-4">        <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/schwarz_weiss_mix.jpg" width="256" alt="Schwarz-Weiß-Mix"/>
                 <div class="card-body">
                     <h5 class="card-title">Schwarz-Wei&szlig;-Mix</h5>
@@ -160,7 +160,7 @@
             </div>
         </div>
         <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/schwarzer_pulli_fuer_kalte_tage.jpg" width="256" alt="Schwarzer Pulli für kalte Tage"/>
                 <div class="card-body">
                     <h5 class="card-title">Schwarzer Pulli f&uuml;r kalte Tage</h5>
@@ -168,7 +168,7 @@
             </div>
         </div>
         <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/sommerliches_oberteil.jpg" width="256" alt="Sommerliches Oberteil"/>
                 <div class="card-body">
                     <h5 class="card-title">Sommerliches Oberteil</h5>
@@ -176,7 +176,7 @@
             </div>
         </div>
         <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/traum_in_tuerkis.jpg" width="256" alt="Traum in Türkis"/>
                 <div class="card-body">
                     <h5 class="card-title">Traum in T&uuml;rkis</h5>
@@ -184,7 +184,7 @@
             </div>
         </div>
     </div><div class="row mt-4">        <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/upcycling.jpg" width="256" alt="Upcycling"/>
                 <div class="card-body">
                     <h5 class="card-title">Upcycling</h5>
@@ -192,7 +192,7 @@
             </div>
         </div>
         <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/weisses_sommeroberteil.jpg" width="256" alt="Weißes Sommeroberteil"/>
                 <div class="card-body">
                     <h5 class="card-title">Wei&szlig;es Sommeroberteil</h5>
@@ -200,7 +200,7 @@
             </div>
         </div>
         <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/zu_streifen_greifen.jpg" width="256" alt="Zu Streifen greifen"/>
                 <div class="card-body">
                     <h5 class="card-title">Zu Streifen greifen</h5>
