--- a/index.html
+++ b/index.html
@@ -41,57 +41,57 @@
     </button>
 </div>
 
+
 <div class="container">
     <h2 id="arbeiten" class="my-4 dancing-script">Meine Arbeiten</h2>
 
     <div class="row">
-        <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+                        <div class="col mb-3">
+            <div class="card">
                 <div class="card-body text-center">
                     <h3 class="mt-4 dancing-script"><a href="tierchen.html">Amigurumi Tierchen</a></h3>
                 </div>
-                <a href="tierchen.html"><img class="d-block mx-auto mb-4" src="img_256/tiger.jpeg" width="256" alt="Roary der Tiger"/></a>
-            </div>
-        </div>
+                <a href="tierchen.html"><img class="d-block mx-auto mb-4" src="img_256/tiger.jpeg" width="256" alt="Amigurumi Tierchen"/></a>
 
-        <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+                            </div>
+        </div>
+                        <div class="col mb-3">
+            <div class="card">
                 <div class="card-body text-center">
-                    <h3 class="mt-4 dancing-script"><a href="boardgame.html">Boardgame Zubehör</a></h3>
+                    <h3 class="mt-4 dancing-script"><a href="boardgame.html">Boardgame Zubeh&ouml;r</a></h3>
                 </div>
-                <a href="boardgame.html"><img class="d-block mx-auto mb-4" src="img_256/maus_und_mystik.jpeg" width="256" alt="Maus &amp; Mystik Täschchen"/></a>
-            </div>
-        </div>
+                <a href="boardgame.html"><img class="d-block mx-auto mb-4" src="img_256/maus_und_mystik.jpeg" width="256" alt="Boardgame Zubeh&ouml;r"/></a>
 
-        <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+                            </div>
+        </div>
+                        <div class="col mb-3">
+            <div class="card">
                 <div class="card-body text-center">
                     <h3 class="mt-4 dancing-script"><a href="nerds.html">Kleine Nerd Ecke</a></h3>
                 </div>
-                <a href="nerds.html"><img class="d-block mx-auto mb-4" src="img_256/tentakel.jpeg" width="256" alt="Purpur &amp; Grün Tentakel"/></a>
-            </div>
-        </div>
+                <a href="nerds.html"><img class="d-block mx-auto mb-4" src="img_256/tentakel.jpeg" width="256" alt="Kleine Nerd Ecke"/></a>
 
-        <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+                            </div>
+        </div>
+                        <div class="col mb-3">
+            <div class="card">
                 <div class="card-body text-center">
                     <h3 class="mt-4 dancing-script"><a href="pflanzen.html">Pflanzen</a></h3>
                 </div>
-                <a href="pflanzen.html"><img class="d-block mx-auto mb-4" src="img_256/kakteen.jpeg" width="256" alt="Kakteen"/></a>
-            </div>
-        </div>
-    </div>
+                <a href="pflanzen.html"><img class="d-block mx-auto mb-4" src="img_256/kakteen.jpeg" width="256" alt="Pflanzen"/></a>
 
-    <div class="row">
-        <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+                            </div>
+        </div>
+                    </div><div class="row mt-4">        <div class="col mb-3">
+            <div class="card">
                 <div class="card-body text-center">
                     <h3 class="mt-4 dancing-script"><a href="klamotten.html">Klamotten</a></h3>
                 </div>
-                <a href="klamotten.html"><img class="d-block mx-auto mb-4" src="img_256/klamotten/haarbaender.jpeg" width="256" alt="Haarbaender"/></a>
-            </div>
+                <a href="klamotten.html"><img class="d-block mx-auto mb-4" src="img_256/klamotten/haarbaender.jpeg" width="256" alt="Klamotten"/></a>
+
+                            </div>
         </div>
-    </div>
+            </div>
 </div>
 
     <div class="container">
