--- a/nerds.html
+++ b/nerds.html
@@ -24,7 +24,7 @@
 
     <div class="row">
         <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img class="d-block mx-auto mb-4" src="img_256/yoshi.jpeg" width="256" alt="Yoshi mit Ei"/>
                 <div class="card-body">
                     <h5 class="card-title">Yoshi mit Ei</h5>
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img class="d-block mx-auto mb-4" src="img_256/pilze.jpeg" width="256" alt="PowerUp und LevelUp Pilze"/>
                 <div class="card-body">
                     <h5 class="card-title">PowerUp und LevelUp Pilze</h5>
@@ -40,7 +40,7 @@
             </div>
         </div>
         <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img class="d-block mx-auto mb-4" src="img_256/stern.jpeg" width="256" alt="Stern"/>
                 <div class="card-body">
                     <h5 class="card-title">Stern</h5>
@@ -48,7 +48,7 @@
             </div>
         </div>
         <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img class="d-block mx-auto mb-4" src="img_256/tentakel.jpeg" width="256" alt="Purpur & Grün Tentakel"/>
                 <div class="card-body">
                     <h5 class="card-title">Purpur &amp; Gr&uuml;n Tentakel</h5>
