--- a/pflanzen.html
+++ b/pflanzen.html
@@ -24,7 +24,7 @@
 
     <div class="row">
         <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img class="d-block mx-auto mb-4" src="img_256/kakteen.jpeg" width="256" alt="Kakteen"/>
                 <div class="card-body">
                     <h5 class="card-title">Kakteen</h5>
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img class="d-block mx-auto mb-4" src="img_256/blume.jpeg" width="256" alt="Blume"/>
                 <div class="card-body">
                     <h5 class="card-title">Blume</h5>
