--- a/tierchen.html
+++ b/tierchen.html
@@ -24,7 +24,7 @@
 
     <div class="row">
         <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img class="d-block mx-auto mb-4" src="img_256/tiger.jpeg" width="256" alt="Roary der Tiger"/>
                 <div class="card-body">
                     <h5 class="card-title">Roary der Tiger</h5>
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img class="d-block mx-auto mb-4" src="img_256/elch.jpeg" width="256" alt="Morton der Elch"/>
                 <div class="card-body">
                     <h5 class="card-title">Morton der Elch</h5>
@@ -40,7 +40,7 @@
             </div>
         </div>
         <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img class="d-block mx-auto mb-4" src="img_256/hase.jpeg" width="256" alt="Wasabi das Häschen"/>
                 <div class="card-body">
                     <h5 class="card-title">Wasabi das H&auml;schen</h5>
@@ -48,7 +48,7 @@
             </div>
         </div>
         <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img class="d-block mx-auto mb-4" src="img_256/tukan.jpeg" width="256" alt="Zico der Tukan"/>
                 <div class="card-body">
                     <h5 class="card-title">Zico der Tukan</h5>
@@ -56,7 +56,7 @@
             </div>
         </div>
     </div><div class="row mt-4">        <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img class="d-block mx-auto mb-4" src="img_256/welpe6.jpeg" width="256" alt="Dakota der Welpe"/>
                 <div class="card-body">
                     <h5 class="card-title">Dakota der Welpe</h5>
@@ -64,7 +64,7 @@
             </div>
         </div>
         <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img class="d-block mx-auto mb-4" src="img_256/maus.jpg" width="256" alt="Manfred die Maus"/>
                 <div class="card-body">
                     <h5 class="card-title">Manfred die Maus</h5>
@@ -72,7 +72,7 @@
             </div>
         </div>
         <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img class="d-block mx-auto mb-4" src="img_256/papagei7.jpeg" width="256" alt="Pepe der Papagei"/>
                 <div class="card-body">
                     <h5 class="card-title">Pepe der Papagei</h5>
@@ -80,7 +80,7 @@
             </div>
         </div>
         <div class="col mb-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img class="d-block mx-auto mb-4" src="img_256/lemur.jpeg" width="256" alt="Sartu Lemur"/>
                 <div class="card-body">
                     <h5 class="card-title">Sartu Lemur</h5>
