Added more content

--- a/boardgame.html
+++ b/boardgame.html
@@ -20,7 +20,7 @@
 
     <h2 class="my-4 dancing-script">Boardgame Zubeh&ouml;r</h2>
     <div class="my-4">
-        &hellip;    </div>
+        Auch Brettspiele und H&auml;keln lassen sich bestens kombinieren.    </div>
 
     <div class="row">
         <div class="col mb-3">
@@ -28,7 +28,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/maus_und_mystik.jpeg" width="256" alt="Maus & Mystik Täschchen"/>
                 <div class="card-body">
                     <h5 class="card-title">Maus &amp; Mystik T&auml;schchen</h5>
-                    <p class="card-text">&hellip;</p>                </div>
+                    <p class="card-text">Alles praktisch verpackt und beschriftet. So geht nichts mehr verloren.</p>                </div>
             </div>
         </div>
         <div class="col mb-3">
@@ -36,15 +36,15 @@
                 <img class="d-block mx-auto mb-4" src="img_256/wuerfelbeutel.jpeg" width="256" alt="Würfeluntersetzer"/>
                 <div class="card-body">
                     <h5 class="card-title">W&uuml;rfeluntersetzer</h5>
-                    <p class="card-text">&hellip;</p>                </div>
+                    <p class="card-text">Praktisches Gimmick f&uuml;r alle W&uuml;rfelspiele. L&auml;sst sich auf- und zukletten an den Ecken</p>                </div>
             </div>
         </div>
         <div class="col mb-3">
             <div class="card">
-                <img class="d-block mx-auto mb-4" src="img_256/stoffies.jpeg" width="256" alt="Stoffies"/>
+                <img class="d-block mx-auto mb-4" src="img_256/stoffies.jpeg" width="256" alt="Stampfi und Pinky"/>
                 <div class="card-body">
-                    <h5 class="card-title">Stoffies</h5>
-                    <p class="card-text">&hellip;</p>                </div>
+                    <h5 class="card-title">Stampfi und Pinky</h5>
+                    <p class="card-text">Zwei Figuren aus den Stoffi-Chroniken.</p>                </div>
             </div>
         </div>
     </div>
