--- a/klamotten.html
+++ b/klamotten.html
@@ -207,6 +207,30 @@
                                     </div>
             </div>
         </div>
+        <div class="col mb-3">
+            <div class="card">
+                <img class="d-block mx-auto mb-4" src="img_256/klamotten/schneller_ueberwurf.jpg" width="256" alt="Schneller Überwurf"/>
+                <div class="card-body">
+                    <h5 class="card-title">Schneller &Uuml;berwurf</h5>
+                                    </div>
+            </div>
+        </div>
+    </div><div class="row mt-4">        <div class="col mb-3">
+            <div class="card">
+                <img class="d-block mx-auto mb-4" src="img_256/klamotten/stola_aus_sockenwolle.jpg" width="256" alt="Stola aus Sockenwolle"/>
+                <div class="card-body">
+                    <h5 class="card-title">Stola aus Sockenwolle</h5>
+                                    </div>
+            </div>
+        </div>
+        <div class="col mb-3">
+            <div class="card">
+                <img class="d-block mx-auto mb-4" src="img_256/klamotten/fruehlings_weste.jpg" width="256" alt="Frühlings-Weste"/>
+                <div class="card-body">
+                    <h5 class="card-title">Fr&uuml;hlings-Weste</h5>
+                                    </div>
+            </div>
+        </div>
     </div>
 
     <div class="mt-4">
