Added more content

--- a/klamotten.html
+++ b/klamotten.html
@@ -20,7 +20,7 @@
 
     <h2 class="my-4 dancing-script">Klamotten</h2>
     <div class="my-4">
-        &hellip;    </div>
+        Im Laufe der Jahre haben sich so einige Klamotten angesammelt. Ist ja auch kein Wunder, bei so vielen verschiedenen M&ouml;glichkeiten. Ich hatte mir eigentlich vorgenommen keine mehr zu H&auml;keln, da mein Kleiderschrank bereits randvoll ist, aber wenn ich ein cooles Teil sehe kann ich irgendwie nicht anders.    </div>
 
     <div class="row">
         <div class="col mb-3">
