--- a/nerds.html
+++ b/nerds.html
@@ -20,7 +20,7 @@
 
     <h2 class="my-4 dancing-script">Kleine Nerd Ecke</h2>
     <div class="my-4">
-        &hellip;    </div>
+            </div>
 
     <div class="row">
         <div class="col mb-3">
@@ -28,7 +28,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/yoshi.jpeg" width="256" alt="Yoshi mit Ei"/>
                 <div class="card-body">
                     <h5 class="card-title">Yoshi mit Ei</h5>
-                    <p class="card-text">&hellip;</p>                </div>
+                                    </div>
             </div>
         </div>
         <div class="col mb-3">
@@ -36,7 +36,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/pilze.jpeg" width="256" alt="PowerUp und LevelUp Pilze"/>
                 <div class="card-body">
                     <h5 class="card-title">PowerUp und LevelUp Pilze</h5>
-                    <p class="card-text">&hellip;</p>                </div>
+                                    </div>
             </div>
         </div>
         <div class="col mb-3">
@@ -44,7 +44,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/stern.jpeg" width="256" alt="Stern"/>
                 <div class="card-body">
                     <h5 class="card-title">Stern</h5>
-                    <p class="card-text">&hellip;</p>                </div>
+                                    </div>
             </div>
         </div>
         <div class="col mb-3">
@@ -52,7 +52,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/tentakel.jpeg" width="256" alt="Purpur & Grün Tentakel"/>
                 <div class="card-body">
                     <h5 class="card-title">Purpur &amp; Gr&uuml;n Tentakel</h5>
-                    <p class="card-text">&hellip;</p>                </div>
+                                    </div>
             </div>
         </div>
     </div>
