--- a/pflanzen.html
+++ b/pflanzen.html
@@ -20,7 +20,7 @@
 
     <h2 class="my-4 dancing-script">Pflanzen</h2>
     <div class="my-4">
-        &hellip;    </div>
+        Das Praktische an geh&auml;kelten Pflanzen: Man muss sie nicht giesen und sie bl&uuml;hen immer.    </div>
 
     <div class="row">
         <div class="col mb-3">
@@ -28,7 +28,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/kakteen.jpeg" width="256" alt="Kakteen"/>
                 <div class="card-body">
                     <h5 class="card-title">Kakteen</h5>
-                    <p class="card-text">&hellip;</p>                </div>
+                    <p class="card-text">Diese niedlichen Kakteen habe ich als Gastgeschenke f&uuml;r meine Hochzeit geh&auml;kelt.</p>                </div>
             </div>
         </div>
         <div class="col mb-3">
@@ -36,7 +36,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/blume.jpeg" width="256" alt="Blume"/>
                 <div class="card-body">
                     <h5 class="card-title">Blume</h5>
-                    <p class="card-text">&hellip;</p>                </div>
+                    <p class="card-text">Auch ohne Wasser bl&uuml;ht sie immer.</p>                </div>
             </div>
         </div>
     </div>
