--- a/tierchen.html
+++ b/tierchen.html
@@ -76,7 +76,7 @@
                 <img class="d-block mx-auto mb-4" src="img_256/papagei7.jpeg" width="256" alt="Pepe der Papagei"/>
                 <div class="card-body">
                     <h5 class="card-title">Pepe der Papagei</h5>
-                    <p class="card-text">&hellip;</p>                </div>
+                    <p class="card-text">In seinem pr&auml;chtigen bunten Federkleid, liebt es Pepe ganz entspannt auf dem Baum zu sitzen und die anderen Tiere zu betrachten und ihre W&ouml;rter zu lernen.</p>                </div>
             </div>
         </div>
         <div class="col mb-3">
