--- a/index.html
+++ b/index.html
@@ -4,95 +4,120 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <title>Tinas Tierchen</title>
+
     <link href="bootstrap.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
-
+    
+    
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
-
-    <title>Tinas Tierchen</title>
 </head>
+
 <body>
-    <script src="bootstrap.min.js"></script>
+        <script src="bootstrap.min.js"></script>
 
+    <div class="container">
+        <div id="page-title" class="position-absolute m-3 dancing-script">Tinas Tierchen</div>
 
-<div id="page-title" class="position-absolute m-3 dancing-script">Tinas Tierchen</div>
-
-
-<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="img/tentakel.jpeg" class="d-block w-100" alt="Purpur &amp; Grün Tentakel"/>
-        </div>
-        <div class="carousel-item">
-            <img src="img/yoshi.jpeg" class="d-block w-100" alt="Yoshi"/>
-        </div>
-        <div class="carousel-item">
-            <img src="img/kakteen.jpeg" class="d-block w-100" alt="Kakteen"/>
-        </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-    </button>
-</div>
-
-
-<div class="container">
-    <h2 id="arbeiten" class="my-4 dancing-script">Meine Arbeiten</h2>
-
-    <div class="row">
-                        <div class="col mb-3">
-            <div class="card">
-                <div class="card-body text-center">
-                    <h3 class="mt-4 dancing-script"><a href="tierchen.html">Amigurumi Tierchen</a></h3>
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="img/tentakel.jpeg" class="d-block w-100" alt="Purpur &amp; Grün Tentakel"/>
                 </div>
-                <a href="tierchen.html"><img class="d-block mx-auto mb-4" src="img_256/tiger.jpeg" width="256" alt="Amigurumi Tierchen"/></a>
-
-                            </div>
-        </div>
-                        <div class="col mb-3">
-            <div class="card">
-                <div class="card-body text-center">
-                    <h3 class="mt-4 dancing-script"><a href="boardgame.html">Boardgame Zubeh&ouml;r</a></h3>
+                <div class="carousel-item">
+                    <img src="img/yoshi.jpeg" class="d-block w-100" alt="Yoshi"/>
                 </div>
-                <a href="boardgame.html"><img class="d-block mx-auto mb-4" src="img_256/maus_und_mystik.jpeg" width="256" alt="Boardgame Zubeh&ouml;r"/></a>
-
-                            </div>
-        </div>
-                        <div class="col mb-3">
-            <div class="card">
-                <div class="card-body text-center">
-                    <h3 class="mt-4 dancing-script"><a href="nerds.html">Kleine Nerd Ecke</a></h3>
+                <div class="carousel-item">
+                    <img src="img/kakteen.jpeg" class="d-block w-100" alt="Kakteen"/>
                 </div>
-                <a href="nerds.html"><img class="d-block mx-auto mb-4" src="img_256/tentakel.jpeg" width="256" alt="Kleine Nerd Ecke"/></a>
-
-                            </div>
-        </div>
-                        <div class="col mb-3">
-            <div class="card">
-                <div class="card-body text-center">
-                    <h3 class="mt-4 dancing-script"><a href="pflanzen.html">Pflanzen</a></h3>
-                </div>
-                <a href="pflanzen.html"><img class="d-block mx-auto mb-4" src="img_256/kakteen.jpeg" width="256" alt="Pflanzen"/></a>
-
-                            </div>
-        </div>
-                    </div><div class="row mt-4">        <div class="col mb-3">
-            <div class="card">
-                <div class="card-body text-center">
-                    <h3 class="mt-4 dancing-script"><a href="klamotten.html">Klamotten</a></h3>
-                </div>
-                <a href="klamotten.html"><img class="d-block mx-auto mb-4" src="img_256/klamotten/haarbaender.jpeg" width="256" alt="Klamotten"/></a>
-
-                            </div>
-        </div>
             </div>
-</div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+
+        <h2 id="arbeiten" class="my-4 dancing-script">Meine Arbeiten</h2>
+        <p>
+            Schön, dass ihr auf meine Seite gefunden habt. Schaut euch einfach ein bißchen um und kontaktet mich, falls
+            Ihr Interesse, Ideen, Fragen oder Anregungen habt.
+        </p>
+
+        <div class="row">
+                                    <div class="col mb-3">
+                <div class="card">
+                    <div class="card-body text-center">
+                        <h3 class="mt-4 dancing-script"><a href="tierchen.html">Amigurumi Tierchen</a></h3>
+                    </div>
+                    <a href="tierchen.html"><img class="d-block mx-auto mb-4" src="img_256/tiger.jpeg" width="256" alt="Amigurumi Tierchen"/></a>
+
+                                    </div>
+            </div>
+                                    <div class="col mb-3">
+                <div class="card">
+                    <div class="card-body text-center">
+                        <h3 class="mt-4 dancing-script"><a href="boardgame.html">Boardgame Zubehör</a></h3>
+                    </div>
+                    <a href="boardgame.html"><img class="d-block mx-auto mb-4" src="img_256/maus_und_mystik.jpeg" width="256" alt="Boardgame Zubehör"/></a>
+
+                                    </div>
+            </div>
+                                    <div class="col mb-3">
+                <div class="card">
+                    <div class="card-body text-center">
+                        <h3 class="mt-4 dancing-script"><a href="nerds.html">Kleine Nerd Ecke</a></h3>
+                    </div>
+                    <a href="nerds.html"><img class="d-block mx-auto mb-4" src="img_256/tentakel.jpeg" width="256" alt="Kleine Nerd Ecke"/></a>
+
+                                    </div>
+            </div>
+                                    <div class="col mb-3">
+                <div class="card">
+                    <div class="card-body text-center">
+                        <h3 class="mt-4 dancing-script"><a href="pflanzen.html">Pflanzen</a></h3>
+                    </div>
+                    <a href="pflanzen.html"><img class="d-block mx-auto mb-4" src="img_256/kakteen.jpeg" width="256" alt="Pflanzen"/></a>
+
+                                    </div>
+            </div>
+                        </div><div class="row mt-4">            <div class="col mb-3">
+                <div class="card">
+                    <div class="card-body text-center">
+                        <h3 class="mt-4 dancing-script"><a href="klamotten.html">Klamotten</a></h3>
+                    </div>
+                    <a href="klamotten.html"><img class="d-block mx-auto mb-4" src="img_256/klamotten/haarbaender.jpeg" width="256" alt="Klamotten"/></a>
+
+                                    </div>
+            </div>
+                    </div>
+
+        <h2 id="arbeiten" class="my-4 dancing-script">Über mich</h2>
+        <p>
+            Schon als ich noch ein Kind war, haben mich Handarbeiten fasziniert. Ich erinnere mich an eine Tante von mir, die jeden Abend in ihrem Sessel gesessen hat und Stunde um Stunde Pullover gestrickt hat. Bereits damals habe ich mich an einigen leichten Strickarbeiten versucht, habe das Hobby dann aber im Laufe der Jahre wieder aus den Augen verloren.
+        </p>
+
+        <p>
+            Häkeln konnte ich zu dieser Zeit überhaupt nicht. Vor einigen Jahren bin ich dann durch Zufall im Aldi (oder war es LIDL? Wer weiß das schon immer so genau…) auf ein komplett-Sockem-Strick-Set gestoßen und ich dachte mir, ich könnte vielleicht meinem alten Hobby mal wieder nachkommen und mir ein paar Socken stricken.
+        </p>
+
+        <p>
+            Sofort war meine alte Leidenschaft wieder da. Im Internet gab es so viele Anleitungen und dort fand ich auch Anleitungen für niedliche kleine Tierchen. Das einzige Problem war, das ich wie schon gesagt nicht häkeln konnte. Mein erstes Amigurumi Tierchen war schließlich eine Strickmaus. Als ich über Weihnachten dann einmal Nachtdienst im Krankenhaus hatte,
+            unterhielt ich mich mit meiner Kollegin übers Handarbeiten. Sie nähte leidenschaftlich gern Patchwork-Decken,
+            häkelte hin und wieder aber auch gerne. Sie sagte mir, ich solle doch einfach in der nächsten Nacht mal ein
+            Knäuel Wolle und eine Häkelnadel mitbringen. Gesagt, getan! Ich brachte also alles benötigte in der nächsten
+            Nacht mit und in einigen ruhigen Stunden brachte mir meine Kollegin schließlich das Häkeln bei.
+        </p>
+
+        <p>
+            Mittlerweile häkel ich viel lieber als zu stricken!
+        </p>
+    </div>
 
     <div class="container">
         <h2 class="my-4 dancing-script">Kontakt</h2>
