Re-generated with new editor and added mor text

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </div>
                     </div>
 
-        <h2 id="arbeiten" class="my-4 dancing-script">Über mich</h2>
+        <h2 id="ueber_mich" class="my-4 dancing-script">Über mich</h2>
         <p>
             Schon als ich noch ein Kind war, haben mich Handarbeiten fasziniert. Ich erinnere mich an eine Tante von mir, die jeden Abend in ihrem Sessel gesessen hat und Stunde um Stunde Pullover gestrickt hat. Bereits damals habe ich mich an einigen leichten Strickarbeiten versucht, habe das Hobby dann aber im Laufe der Jahre wieder aus den Augen verloren.
         </p>
