--- a/index.html
+++ b/index.html
@@ -18,30 +18,31 @@
         <script src="bootstrap.min.js"></script>
 
     <div class="container">
-        <div id="page-title" class="position-absolute m-3 dancing-script">Tinas Tierchen</div>
+        <div id="favoritsGalleryBlock">
+            <div id="page-title" class="position-absolute m-3 dancing-script">Tinas Tierchen</div>
 
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="img/tentakel.jpeg" class="d-block w-100" alt="Purpur &amp; Grün Tentakel"/>
+            <div id="favoritsGallery" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="img/tentakel.jpeg" class="d-block w-100" alt="Purpur &amp; Grün Tentakel"/>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/yoshi.jpeg" class="d-block w-100" alt="Yoshi"/>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/kakteen.jpeg" class="d-block w-100" alt="Kakteen"/>
+                    </div>
                 </div>
-                <div class="carousel-item">
-                    <img src="img/yoshi.jpeg" class="d-block w-100" alt="Yoshi"/>
-                </div>
-                <div class="carousel-item">
-                    <img src="img/kakteen.jpeg" class="d-block w-100" alt="Kakteen"/>
-                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#favoritsGallery" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#favoritsGallery" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
         </div>
-
 
         <h2 id="arbeiten" class="my-4 dancing-script">Meine Arbeiten</h2>
         <p>
