--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
             <div id="favoritsGallery" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="img/tentakel.jpeg" class="d-block w-100" alt="Purpur &amp; Grün Tentakel"/>
+                        <img src="img/nerds/tentakel.jpeg" class="d-block w-100" alt="Purpur &amp; Grün Tentakel"/>
                     </div>
                     <div class="carousel-item">
-                        <img src="img/yoshi.jpeg" class="d-block w-100" alt="Yoshi"/>
+                        <img src="img/nerds/yoshi.jpeg" class="d-block w-100" alt="Yoshi"/>
                     </div>
                     <div class="carousel-item">
-                        <img src="img/kakteen.jpeg" class="d-block w-100" alt="Kakteen"/>
+                        <img src="img/pflanzen/kakteen.jpeg" class="d-block w-100" alt="Kakteen"/>
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#favoritsGallery" data-bs-slide="prev">
