Added more content.

--- a/nerds.html
+++ b/nerds.html
@@ -149,6 +149,22 @@
 
                                         <img
                             class="d-block mx-auto mb-4 pop"
+                            src="img_256/nerds/piranha_pflanze.jpg"
+                            width="256"
+                            data-name="Piranha Pflanze"
+                            alt="Piranha Pflanze"
+                    />
+                    
+                    <div class="card-body">
+                        <h5 class="card-title">Piranha Pflanze</h5>
+                                            </div>
+                </div>
+            </div>
+                        </div><div class="row mt-4">            <div class="col mb-3">
+                <div class="card">
+
+                                        <img
+                            class="d-block mx-auto mb-4 pop"
                             src="img_256/nerds/tentakel.jpeg"
                             width="256"
                             data-name="Purpur &amp; Grün Tentakel"
@@ -160,7 +176,7 @@
                                             </div>
                 </div>
             </div>
-                        </div><div class="row mt-4">            <div class="col mb-3">
+                                    <div class="col mb-3">
                 <div class="card">
 
                                         <img
