Added more content.

--- a/index.html
+++ b/index.html
@@ -114,6 +114,24 @@
 
                                     </div>
             </div>
+                                    <div class="col mb-3">
+                <div class="card">
+                    <div class="card-body text-center">
+                        <h3 class="mt-4 dancing-script"><a href="nuetzliche_helfer.html">Nützliche Helfer</a></h3>
+                    </div>
+                    <a href="nuetzliche_helfer.html"><img class="d-block mx-auto mb-4" src="img_256/helfer/zugluftstopper2.jpg" width="256" alt="Nützliche Helfer"/></a>
+
+                                    </div>
+            </div>
+                        </div><div class="row mt-4">            <div class="col mb-3">
+                <div class="card">
+                    <div class="card-body text-center">
+                        <h3 class="mt-4 dancing-script"><a href="schilder_und_bilder.html">Schilder &amp; Bilder</a></h3>
+                    </div>
+                    <a href="schilder_und_bilder.html"><img class="d-block mx-auto mb-4" src="img_256/schilder/dream.jpg" width="256" alt="Schilder &amp; Bilder"/></a>
+
+                                    </div>
+            </div>
                     </div>
 
         <h2 id="ueber_mich" class="my-4 dancing-script">Über mich</h2>
