Added more content.

--- a/nerds.html
+++ b/nerds.html
@@ -208,6 +208,38 @@
                                             </div>
                 </div>
             </div>
+                                    <div class="col mb-3">
+                <div class="card">
+
+                                        <img
+                            class="d-block mx-auto mb-4 pop"
+                            src="img_256/nerds/jack_skellington.jpg"
+                            width="256"
+                            data-name="Jack Skellington"
+                            alt="Jack Skellington"
+                    />
+                    
+                    <div class="card-body">
+                        <h5 class="card-title">Jack Skellington</h5>
+                                            </div>
+                </div>
+            </div>
+                        </div><div class="row mt-4">            <div class="col mb-3">
+                <div class="card">
+
+                                        <img
+                            class="d-block mx-auto mb-4 pop"
+                            src="img_256/nerds/cthulhu.jpg"
+                            width="256"
+                            data-name="Cthulhu"
+                            alt="Cthulhu"
+                    />
+                    
+                    <div class="card-body">
+                        <h5 class="card-title">Cthulhu</h5>
+                                            </div>
+                </div>
+            </div>
                     </div>
 
         <div class="mt-4">
