--- a/nuetzliche_helfer.html
+++ b/nuetzliche_helfer.html
@@ -142,6 +142,22 @@
                                             </div>
                 </div>
             </div>
+                        </div><div class="row mt-4">            <div class="col mb-3">
+                <div class="card">
+
+                                        <img
+                            class="d-block mx-auto mb-4 pop"
+                            src="img_256/helfer/wein_zwerg.jpg"
+                            width="256"
+                            data-name="Weinflaschen-Zwerg"
+                            alt="Weinflaschen-Zwerg"
+                    />
+                    
+                    <div class="card-body">
+                        <h5 class="card-title">Weinflaschen-Zwerg</h5>
+                                            </div>
+                </div>
+            </div>
                     </div>
 
         <div class="mt-4">
