--- a/gemuetliches_zuhause.html
+++ b/gemuetliches_zuhause.html
@@ -106,6 +106,15 @@
                                         alt="Decke Sophies Garden - Bild 3"
                                 />
                             </div>
+                                                        <div class="carousel-item">
+                                <img
+                                        class="d-block mx-auto mb-4 pop"
+                                        src="img_256/zuhause/decke_sophies_garden_rosa.jpg"
+                                        width="256"
+                                        data-name="Decke Sophies Garden"
+                                        alt="Decke Sophies Garden - Bild 4"
+                                />
+                            </div>
                                                     </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carousel3" data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
