--- a/pflanzen.html
+++ b/pflanzen.html
@@ -93,6 +93,15 @@
                                         alt="Kleine Sukkulenten - Bild 2"
                                 />
                             </div>
+                                                        <div class="carousel-item">
+                                <img
+                                        class="d-block mx-auto mb-4 pop"
+                                        src="img_256/pflanzen/kakteen_teller.jpg"
+                                        width="256"
+                                        data-name="Kleine Sukkulenten"
+                                        alt="Kleine Sukkulenten - Bild 3"
+                                />
+                            </div>
                                                     </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carousel1" data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
